@@ -33,7 +33,7 @@ encodings=ASCII Cp850 Cp1251 Cp1252 ISO8859_1 ISO8859_2 MacRoman Big5 GBK \
 	KOI8_R SJIS Unicode UTF8 
 
 # History text field menu caption
-history.caption=Previously entered values:
+history.caption=Previously entered strings:
 
 ###
 ### TOOLBAR
